css/styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  background: #E8E8E8;
  font-family: 'Play', sans-serif;
}
h2 {
  text-align: center;
  margin: 1%;
  color: #E53620;
  text-shadow: 1px 1px 3px black;
}
iframe {
  position: relative;
  max-width: 100%;
  left: 50%;
  transform: translate(-50%,0);
}
#container {
  background: rgba(255, 255, 255, 0.5);
  padding: 4%;
  padding-top: 0;
  margin: 2%;
  text-align: justify;
}
#navigation {
  padding: 5 15 5 15;
  text-transform: uppercase;
  font-family: sans-serif;
  font-size: .8em;
  margin-top: 2%;
  overflow: auto;
}
#navigation .nav {
  position: relative;
  text-align: center;
  margin-bottom: 5%;
  height: 30px;
  text-decoration: none;
  color: #E53620;
  text-shadow: 1px 1px 3px black;
}
#navigation ul {
  text-align: center;
}
#navigation li {
  display: inline-block;
  margin: 5px;
  text-align: center;
  list-style-type: none;
}
#navigation li:hover {
  cursor: pointer;
  text-decoration: underline;
}
#navigation .nav:hover:after {
  content: url(../img/ring.png);
  position: absolute;
  bottom: -50%;
  left: 50%;
  transform: translate(-50%,0);
}
#footer {
  position: absolute;
  left: 50%;
  transform: translate(-50%,0);
  bottom: 0;
  z-index: -1;
}
#logo img, #footer img{
  max-width: 100%;
  display: block;
}
#footer img {
  max-height: 500px;
}
#column-three {
  display: none;
}
@media (min-width: 700px) {
  #logo img {
    margin-left: auto;
    margin-right: auto;
    width: 616px;
  }
}
@media (min-width: 900px) {
  #navigation {
    float: right;
    overflow: hidden;
  }
  #logo {
    position: relative;
    top: 0;
  }
  #logo img {
    float: left;
    width: 50%;
  }
  #column-one, #column-two {
    float: left;
    width: 50%;
    margin: 1%;
  }
  #column-one {
    clear: left;
    width: 45%;

  }
  #container {
    overflow: auto;
  }
}
@media (min-width: 1250px) {
  #container {
    overflow: auto;
  }
  #navigation .nav {
    position: relative;
    text-align: center;
    margin: 40px;
    margin-top: 100px;
    font-size: 1.2em;
    margin-bottom: 5%;
    height: 30px;
    text-decoration: none;
  }
  #column-one {
    clear: left;
    float: left;
    width: 31%;
    margin: 1%;
  }
  #column-three {
    display: block;
  }
  #column-three img {
    width: 50%;
    float: left;
    height: 150px;
    padding: 1%;
    object-fit: cover;
  }
  #column-two, #column-three {
    float: left;
    width: 31%;
    margin: 1%;
    }
}
@media (min-width: 1525px) {
  #logo img {
    width: 660px;
  }
  #container {
    padding-top: 0;
  }
}

